force-app/main/default/objects/Managed_Item_Inspection__c/Managed_Item_Inspection__c.object-meta.xml
<CustomObject>
    <label>Managed Item Inspection</label>
    <nameField>
        <displayFormat>Ins-{0000}</displayFormat>
        <label>Ins</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Managed Item Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>