force-app/main/default/objects/Managed_Item_Inspection__c/fields/Actual_Weight__c.field-meta.xml
<CustomField>
    <fullName>Actual_Weight__c</fullName>
    <inlineHelpText>Weigh the fire extinguisher to check it is consistent with the manufacturer&apos;s labelled gross weight. The allowable tolerance is 3%.</inlineHelpText>
    <label>Actual Weight</label>
    <length>10</length>
    <type>Text</type>
</CustomField>