force-app/main/default/objects/Managed_Item_Inspection__c/fields/Actuating_Device__c.field-meta.xml
<CustomField>
    <fullName>Actuating_Device__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Determine, where possible and without discharging any contents that the actuating device is free from damage and corrosion and moves freely.</inlineHelpText>
    <label>Actuating Device</label>
    <type>Checkbox</type>
</CustomField>