force-app/main/default/objects/Managed_Item_Inspection__c/fields/All_Markings_Legible__c.field-meta.xml
<CustomField>
    <fullName>All_Markings_Legible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Markings Legible</label>
    <type>Checkbox</type>
</CustomField>