force-app/main/default/objects/Managed_Item_Inspection__c/fields/Anti_Tamper_Seal__c.field-meta.xml
<CustomField>
    <fullName>Anti_Tamper_Seal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Anti-tamper device should be positioned so that it must be broken to activate the FE. If the device is either missing or broken it should only be replaced after the extinguisher has passed inspection and a note should be made in the maintenance log.</inlineHelpText>
    <label>Anti-Tamper Seal</label>
    <type>Checkbox</type>
</CustomField>