force-app/main/default/objects/Managed_Item_Inspection__c/fields/Any_nicks_gouges__c.field-meta.xml
<CustomField>
    <fullName>Any_nicks_gouges__c</fullName>
    <label>Any nicks, gouges, cracks or corrosion?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>