force-app/main/default/objects/Managed_Item_Inspection__c/fields/Body_Halves_around_Load_Pin_checked__c.field-meta.xml
<CustomField>
    <fullName>Body_Halves_around_Load_Pin_checked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check for NICKS CRACKS GOUGING DISTORTION OR ANY IMPAIRED ROTATION OF THE BODY HALVES AROUND THE LOAD PIN</inlineHelpText>
    <label>Body Halves around Load Pin checked</label>
    <type>Checkbox</type>
</CustomField>