force-app/main/default/objects/Managed_Item_Inspection__c/fields/Broken_Wires_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Broken_Wires_Inspection__c</fullName>
    <label>Broken Wires Inspection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>