force-app/main/default/objects/Managed_Item_Inspection__c/fields/Certificate__c.field-meta.xml
<CustomField>
    <fullName>Certificate__c</fullName>
    <label>Certificate #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>