force-app/main/default/objects/Managed_Item_Inspection__c/fields/Chain_links__c.field-meta.xml
<CustomField>
    <fullName>Chain_links__c</fullName>
    <inlineHelpText>Inspect every chain link for WEAR, TWISTING, STRETCHING, NICKS, GAUGING AND HEAT EFFECTS.</inlineHelpText>
    <label>Chain Link Inspection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>n/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>