force-app/main/default/objects/Managed_Item_Inspection__c/fields/Check__c.field-meta.xml
<CustomField>
    <fullName>Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check needle for visible damage</label>
    <type>Checkbox</type>
</CustomField>