force-app/main/default/objects/Managed_Item_Inspection__c/fields/Check_for_any_erratic_needle_behaviour__c.field-meta.xml
<CustomField>
    <fullName>Check_for_any_erratic_needle_behaviour__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check for any erratic needle behaviour</label>
    <type>Checkbox</type>
</CustomField>