force-app/main/default/objects/Managed_Item_Inspection__c/fields/Check_for_Kinks__c.field-meta.xml
<CustomField>
    <fullName>Check_for_Kinks__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Discard or slip required</inlineHelpText>
    <label>Checked for Kinks/Twists</label>
    <type>Checkbox</type>
</CustomField>