force-app/main/default/objects/Managed_Item_Inspection__c/fields/Check_for_loss_of_fluid_liquid_gauge__c.field-meta.xml
<CustomField>
    <fullName>Check_for_loss_of_fluid_liquid_gauge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check for loss of fluid if applicable</label>
    <type>Checkbox</type>
</CustomField>