force-app/main/default/objects/Managed_Item_Inspection__c/fields/Check_for_Signs_of_Wear__c.field-meta.xml
<CustomField>
    <fullName>Check_for_Signs_of_Wear__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Wear can be 1/3 of diameter of the outer wires (outer strands)</inlineHelpText>
    <label>Checked for Worn Sides</label>
    <type>Checkbox</type>
</CustomField>