force-app/main/default/objects/Managed_Item_Inspection__c/fields/Check_for_sr__c.field-meta.xml
<CustomField>
    <fullName>Check_for_sr__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If surface rust is evident the wire cable requires lubrication prior to going back into service</inlineHelpText>
    <label>Checked for Surface Rust</label>
    <type>Checkbox</type>
</CustomField>