force-app/main/default/objects/Managed_Item_Inspection__c/fields/Check_for_zero_needle_movement__c.field-meta.xml
<CustomField>
    <fullName>Check_for_zero_needle_movement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check for zero needle movement</label>
    <type>Checkbox</type>
</CustomField>