force-app/main/default/objects/Managed_Item_Inspection__c/fields/Check_measurement_scale_if_legible__c.field-meta.xml
<CustomField>
    <fullName>Check_measurement_scale_if_legible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check measurement scale if legible</label>
    <type>Checkbox</type>
</CustomField>