force-app/main/default/objects/Managed_Item_Inspection__c/fields/Checked_End_Fittings__c.field-meta.xml
<CustomField>
    <fullName>Checked_End_Fittings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked End Fittings</label>
    <type>Checkbox</type>
</CustomField>