force-app/main/default/objects/Managed_Item_Inspection__c/fields/Checked_Eyes__c.field-meta.xml
<CustomField>
    <fullName>Checked_Eyes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked Eyes</label>
    <type>Checkbox</type>
</CustomField>