force-app/main/default/objects/Managed_Item_Inspection__c/fields/Checked_for_Abrasions_del__c.field-meta.xml
<CustomField>
    <fullName>Checked_for_Abrasions_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked for Abrasions</label>
    <type>Checkbox</type>
</CustomField>