force-app/main/default/objects/Managed_Item_Inspection__c/fields/Checked_for_any_abnormalities__c.field-meta.xml
<CustomField>
    <fullName>Checked_for_any_abnormalities__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>eg dislodged core</inlineHelpText>
    <label>Checked for Abnormalities</label>
    <type>Checkbox</type>
</CustomField>