force-app/main/default/objects/Managed_Item_Inspection__c/fields/Checked_for_Bird_Caging__c.field-meta.xml
<CustomField>
    <fullName>Checked_for_Bird_Caging__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Discard or slip required</inlineHelpText>
    <label>Checked for Bird Caging</label>
    <type>Checkbox</type>
</CustomField>