force-app/main/default/objects/Managed_Item_Inspection__c/fields/Checked_for_Broken_Wires__c.field-meta.xml
<CustomField>
    <fullName>Checked_for_Broken_Wires__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked for Broken Wires</label>
    <type>Checkbox</type>
</CustomField>