force-app/main/default/objects/Managed_Item_Inspection__c/fields/Checked_for_Damage_Missing_Deployed__c.field-meta.xml
<CustomField>
    <fullName>Checked_for_Damage_Missing_Deployed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked for Damage/Missing/Deployed</label>
    <type>Checkbox</type>
</CustomField>