force-app/main/default/objects/Managed_Item_Inspection__c/fields/Checked_for_Dirt_Grease__c.field-meta.xml
<CustomField>
    <fullName>Checked_for_Dirt_Grease__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked for Dirt/Grease</label>
    <type>Checkbox</type>
</CustomField>