force-app/main/default/objects/Managed_Item_Inspection__c/fields/Checked_for_Discolouration__c.field-meta.xml
<CustomField>
    <fullName>Checked_for_Discolouration__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If Discolouration is evident then the wire cable must be discarded</inlineHelpText>
    <label>Checked for Discolouration</label>
    <type>Checkbox</type>
</CustomField>