force-app/main/default/objects/Managed_Item_Inspection__c/fields/Checked_for_Excessive_Soiling__c.field-meta.xml
<CustomField>
    <fullName>Checked_for_Excessive_Soiling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked for Excessive Soiling</label>
    <type>Checkbox</type>
</CustomField>