force-app/main/default/objects/Managed_Item_Inspection__c/fields/Checked_for_Excessive_Wear__c.field-meta.xml
<CustomField>
    <fullName>Checked_for_Excessive_Wear__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Corrosion, Burns / Cracks / Sharp Edges, Moving Parts Do Not Operate Smoothly, Deformation, Spring(s) Malfunctioning, Unusual Discolouration, Fails To Lock Onto Rope Reliably</inlineHelpText>
    <label>Checked for Damage/Excessive Wear</label>
    <type>Checkbox</type>
</CustomField>