force-app/main/default/objects/Managed_Item_Inspection__c/fields/Checked_for_Free_Movement_of_the_Latch__c.field-meta.xml
<CustomField>
    <fullName>Checked_for_Free_Movement_of_the_Latch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked for Free Movement of the Latch</label>
    <type>Checkbox</type>
</CustomField>