force-app/main/default/objects/Managed_Item_Inspection__c/fields/Checked_for_Obstructions__c.field-meta.xml
<CustomField>
    <fullName>Checked_for_Obstructions__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Rust, Dirt, Etc.</inlineHelpText>
    <label>Checked for Obstructions</label>
    <type>Checkbox</type>
</CustomField>