force-app/main/default/objects/Managed_Item_Inspection__c/fields/Checked_for_Pitting_Severe_Corrosion__c.field-meta.xml
<CustomField>
    <fullName>Checked_for_Pitting_Severe_Corrosion__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Servere corrosion is evident when pitting is evident between wires.  Discard immediately</inlineHelpText>
    <label>Checked for Pitting (Fusion in valleys)</label>
    <type>Checkbox</type>
</CustomField>