force-app/main/default/objects/Managed_Item_Inspection__c/fields/Checked_for_Sharp_Edges__c.field-meta.xml
<CustomField>
    <fullName>Checked_for_Sharp_Edges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked for Sharp Edges</label>
    <type>Checkbox</type>
</CustomField>