force-app/main/default/objects/Managed_Item_Inspection__c/fields/Checked_for_Splice_Loose_Coming_Out__c.field-meta.xml
<CustomField>
    <fullName>Checked_for_Splice_Loose_Coming_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked for Splice Loose/Coming Out</label>
    <type>Checkbox</type>
</CustomField>