force-app/main/default/objects/Managed_Item_Inspection__c/fields/Checked_for_Splits_Cuts_or_Gouges__c.field-meta.xml
<CustomField>
    <fullName>Checked_for_Splits_Cuts_or_Gouges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked for Splits, Cuts or Gouges</label>
    <type>Checkbox</type>
</CustomField>