force-app/main/default/objects/Managed_Item_Inspection__c/fields/Checked_for_Sticky_Gates__c.field-meta.xml
<CustomField>
    <fullName>Checked_for_Sticky_Gates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked for Sticky Gates</label>
    <type>Checkbox</type>
</CustomField>