force-app/main/default/objects/Managed_Item_Inspection__c/fields/Checked_for_UV_Damage__c.field-meta.xml
<CustomField>
    <fullName>Checked_for_UV_Damage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked for UV Damage</label>
    <type>Checkbox</type>
</CustomField>