force-app/main/default/objects/Managed_Item_Inspection__c/fields/Checked_for_Wear_Swivels_Latch_Pins__c.field-meta.xml
<CustomField>
    <fullName>Checked_for_Wear_Swivels_Latch_Pins__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked for Wear - Swivels &amp; Latch Pins</label>
    <type>Checkbox</type>
</CustomField>