force-app/main/default/objects/Managed_Item_Inspection__c/fields/Checked_forFrays__c.field-meta.xml
<CustomField>
    <fullName>Checked_forFrays__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked for Frays/Worn Threads</label>
    <type>Checkbox</type>
</CustomField>