force-app/main/default/objects/Managed_Item_Inspection__c/fields/Checked_if_Reserve_Lifeline_is_Extended__c.field-meta.xml
<CustomField>
    <fullName>Checked_if_Reserve_Lifeline_is_Extended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked if Reserve Lifeline is Extended</label>
    <type>Checkbox</type>
</CustomField>