force-app/main/default/objects/Managed_Item_Inspection__c/fields/Checked_is_visible__c.field-meta.xml
<CustomField>
    <fullName>Checked_is_visible__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Label must be present and readable</inlineHelpText>
    <label>Label is visible</label>
    <type>Checkbox</type>
</CustomField>