force-app/main/default/objects/Managed_Item_Inspection__c/fields/Checked_Weld_Splatter__c.field-meta.xml
<CustomField>
    <fullName>Checked_Weld_Splatter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked for Weld Splatter</label>
    <type>Checkbox</type>
</CustomField>