force-app/main/default/objects/Managed_Item_Inspection__c/fields/CheckedforExcessive_Wear__c.field-meta.xml
<CustomField>
    <fullName>CheckedforExcessive_Wear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked for Excessive Wear</label>
    <type>Checkbox</type>
</CustomField>