force-app/main/default/objects/Managed_Item_Inspection__c/fields/CHEMICAL__c.field-meta.xml
<CustomField>
    <fullName>CHEMICAL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sling Inspected for CHEMICAL DAMAGE</label>
    <type>Checkbox</type>
</CustomField>