force-app/main/default/objects/Managed_Item_Inspection__c/fields/Chemical_Damage_weakening__c.field-meta.xml
<CustomField>
    <fullName>Chemical_Damage_weakening__c</fullName>
    <label>Chemical Damage (weakening)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>n/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>