force-app/main/default/objects/Managed_Item_Inspection__c/fields/Conducted_by_3rd_Party_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Conducted_by_3rd_Party_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conducted by (3rd Party Supplier)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Managed Item Inspections</relationshipLabel>
    <relationshipName>Managed_Item_Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>