force-app/main/default/objects/Managed_Item_Inspection__c/fields/D_Ring_Inspection__c.field-meta.xml
<CustomField>
    <fullName>D_Ring_Inspection__c</fullName>
    <label>D Ring Inspection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>