force-app/main/default/objects/Managed_Item_Inspection__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date Conducted</label>
    <type>Date</type>
</CustomField>