force-app/main/default/objects/Managed_Item_Inspection__c/fields/Details_of_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Inspection__c</fullName>
    <label>Details of Inspection</label>
    <type>TextArea</type>
</CustomField>