force-app/main/default/objects/Managed_Item_Inspection__c/fields/Devices_checked_for_WEAR__c.field-meta.xml
<CustomField>
    <fullName>Devices_checked_for_WEAR__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>at load bearing points</inlineHelpText>
    <label>Connecting Devices checked for WEAR</label>
    <type>Checkbox</type>
</CustomField>