force-app/main/default/objects/Managed_Item_Inspection__c/fields/Excessive_Lateral_Movement_in_Pulleys__c.field-meta.xml
<CustomField>
    <fullName>Excessive_Lateral_Movement_in_Pulleys__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excessive Lateral Movement in Pulleys</label>
    <type>Checkbox</type>
</CustomField>