force-app/main/default/objects/Managed_Item_Inspection__c/fields/Exterior_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Exterior_Instructions__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Clean the equipment using a dry cloth or soapy water if necessary, ensure that the operating instructions and all labels are legible.</inlineHelpText>
    <label>Exterior &amp; Instructions</label>
    <type>Checkbox</type>
</CustomField>