force-app/main/default/objects/Managed_Item_Inspection__c/fields/External_Damage__c.field-meta.xml
<CustomField>
    <fullName>External_Damage__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>All external components should be checked for damage that may affect the safe use of the equipment. Rust or corrosion causing pitting of metals may warrant replacement of the canister or particular part. If in doubt the canister should be pressure tested.</inlineHelpText>
    <label>External Damage</label>
    <type>Checkbox</type>
</CustomField>