force-app/main/default/objects/Managed_Item_Inspection__c/fields/FB_Accessibilty__c.field-meta.xml
<CustomField>
    <fullName>FB_Accessibilty__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The equipment should be in the position nominated on the Emergency Evacuation Diagram. There should be no obstructions preventing easy access. A minimum clearance of 100mm from the ground to the bottom of the extinguisher and a maximum of 1200 to the top.</inlineHelpText>
    <label>FB Accessibilty</label>
    <type>Checkbox</type>
</CustomField>