force-app/main/default/objects/Managed_Item_Inspection__c/fields/FB_External_Damage__c.field-meta.xml
<CustomField>
    <fullName>FB_External_Damage__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>All external components should be checked for damage that may affect the safe use of the equipment.</inlineHelpText>
    <label>FB External Damage</label>
    <type>Checkbox</type>
</CustomField>