force-app/main/default/objects/Managed_Item_Inspection__c/fields/Fire_Blanket_Checks__c.field-meta.xml
<CustomField>
    <fullName>Fire_Blanket_Checks__c</fullName>
    <label>Fire Blanket Checks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>