force-app/main/default/objects/Managed_Item_Inspection__c/fields/FLAKY_SURFACE__c.field-meta.xml
<CustomField>
    <fullName>FLAKY_SURFACE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sling Inspected for FLAKING SURFACE</label>
    <type>Checkbox</type>
</CustomField>