force-app/main/default/objects/Managed_Item_Inspection__c/fields/Functional_Condition__c.field-meta.xml
<CustomField>
    <fullName>Functional_Condition__c</fullName>
    <label>Functional Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>