force-app/main/default/objects/Managed_Item_Inspection__c/fields/Gauge_Size_mm__c.field-meta.xml
<CustomField>
    <fullName>Gauge_Size_mm__c</fullName>
    <inlineHelpText>If Gauge is 63mm or less the allowable tolerance is 3%
If gauge is bigger than 63mm the allowable tolerance is 1%</inlineHelpText>
    <label>Gauge Size (mm)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>