force-app/main/default/objects/Managed_Item_Inspection__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <length>20</length>
    <type>Text</type>
</CustomField>