force-app/main/default/objects/Managed_Item_Inspection__c/fields/Gravity_Stop_Not_Present_or_Inoperable__c.field-meta.xml
<CustomField>
    <fullName>Gravity_Stop_Not_Present_or_Inoperable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gravity Stop Not Present or Inoperable</label>
    <type>Checkbox</type>
</CustomField>