force-app/main/default/objects/Managed_Item_Inspection__c/fields/Gross_Weight__c.field-meta.xml
<CustomField>
    <fullName>Gross_Weight__c</fullName>
    <inlineHelpText>Identify the gross weight as marked on the extinguisher.</inlineHelpText>
    <label>Gross Weight</label>
    <length>10</length>
    <type>Text</type>
</CustomField>