force-app/main/default/objects/Managed_Item_Inspection__c/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <inlineHelpText>Id Tag - identify grade and specification (WLL)</inlineHelpText>
    <label>ID Tag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>