force-app/main/default/objects/Managed_Item_Inspection__c/fields/ID_No__c.field-meta.xml
<CustomField>
    <fullName>ID_No__c</fullName>
    <label>ID No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>